Usepackage Environment Manager
Copyright (C) 1995-2004  Jonathan Hogg  <jonathan@onegoodidea.com>
.  
This program is free software; you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation; either version 2 of the License, or
(at your option) any later version.
.
This program is distributed in the hope that it will be useful, 
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.
.
You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software 
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

2004-05-19  Jonathan Hogg  <jonathan@onegoodidea.com>

	* usepackage.c: Changes to re-order variables that occur multiple
	times in a set of packages to be pushed into the environment.
	Based on a patch contributed by Brett Viren <bv@bnl.gov>.

	* linked_list.c linked_list.h: Changes to return the new node from
	add_to_head and add_to_tail.

2003-11-16  Jonathan Hogg  <jonathan@onegoodidea.com>

	* grammar.y, scanner.l: Addition of new operators QEQUALS (?=)
	and QPLUSEQUALS (?+=) to variable settings rules.

	* usepackage.c, package.h: Changes to support testing for the
	existence of paths before adding them to the environment, via
	new ?= and ?+= operators. New test_paths function added for this.

	* use.1.in, usepackage.1.in: Documentation of new syntax and
	fixes to old mistakes.

2003-04-18  Jonathan Hogg  <jonathan@onegoodidea.com>

	* Tagged version 1.7 for release.

	* usepackage.c, configure.ac: Addition of mailing list address to
	online help text.

	* README, usepackage.1.in, use.1.in: Slight fixes to the 
	documentation.

2003-03-12  Jonathan Hogg  <jonathan@onegoodidea.com>

	* usepackage.c: Changes to support shell matching and inclusion of
	script components into the output.
