@@ -1,5 +1,5 @@
 Usepackage Environment Manager
-Copyright (C) 1995-2004  Jonathan Hogg  <jonathan@onegoodidea.com>
+Copyright (C) 1995-2005  Jonathan Hogg  <jonathan@onegoodidea.com>
 .  
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -14,6 +14,12 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software 
 Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+
+2005-12-11  Jonathan Hogg  <jonathan@onegoodidea.com>
+
+	* Tagged version 1.8 for release.
+
+	* Updated copyright notices to 2005.
 
 2004-05-19  Jonathan Hogg  <jonathan@onegoodidea.com>
 
